Fix tooltip triangle styling issues (#182)
* Fix sub-pixel aliasing gaps on retina screens

For some reason, there is often a 0.5px gap between the triangle and the tooltip box on retina screens. Adding/subtracting 0.5px fixes the problem.

* Fix tooltip drop-shadow overlapping triangle

Place the triangle after the text box rather than before, in order to change the z-index and avoid the box-shadow overlapping the triangle

* Don't fade out icon button tooltip when disabled

Disabled icon-toolbar buttons are faded out to 20% opacity. This change prevents the on-hover tooltip from being similarly faded out on hover, as it just makes them harder to read and the transparency looks weird

--- a/src/components/icon-toolbar/icon-toolbar.scss
+++ b/src/components/icon-toolbar/icon-toolbar.scss
@@ -44,7 +44,10 @@
 
   &:disabled {
     cursor: not-allowed;
-    opacity: 0.2;
+
+    svg {
+      opacity: 0.2;
+    }
   }
 
   svg {
@@ -76,12 +79,12 @@
     opacity: 1;
   }
 
-  &::before {
+  &::after {
     $triangle-size: 7px;
 
     position: absolute;
     top: calc(50% - #{$triangle-size});
-    left: -$triangle-size;
+    left: -$triangle-size + 0.5;
     width: 0;
     height: 0;
     border-color: transparent;
